changement de cv

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <!-- Titre cv -->
         <div class="heading">
             <h1>Bonjour, je suis Cheng</h1>
-            <h3>Développer Web Junior</h3>
+            <h3>Développeur Web Junior</h3>
             <a href="docs/CV-JOHN.pdf" class="button1">Télécharger CV</a>
         </div>
     </section>
@@ -136,7 +136,7 @@
                             <p class="text-muted"><small class="glyphicon glyphicon-time"></small> 2013-A ce jour </p>
                         </div>
                         <div class="timeline-body">
-                            <p>Reprise du restaurant familiale Japonais sur Poitiers</p>
+                            <p>Reprise du restaurant familial japonais sur Poitiers</p>
                         </div>
                     </div>
                 </div>
@@ -147,7 +147,7 @@
                     <div class="timeline-panel">
                         <div class="timeline-heading">
                             <h3>Intérimaire</h3>
-                            <h4>Différents poste</h4>
+                            <h4>Différents postes</h4>
                             <p class="text-muted"><small class="glyphicon glyphicon-time"></small> 2007-2013</p>
                         </div>
                         <div class="timeline-body">
