--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                         </div>
                         <div class="timeline-body">
                             <p>Echafaudeur - calorifugeur en centrale nucléaire</p>
-                            <p>Manutentionnnaire</p>
+                            <p>Manutentionnaire</p>
                         </div>
                     </div>
                 </div>
@@ -163,11 +163,11 @@
                     <div class="timeline-panel">
                         <div class="timeline-heading">
                             <h3>PAO</h3>
-                            <h4>Maquettiste Executant</h4>
+                            <h4>Maquettiste Exécutant</h4>
                             <p class="text-muted"><small class="glyphicon glyphicon-time"></small> 1997-2007</p>
                         </div>
                         <div class="timeline-body">
-                            <p>Maquettiste Executant dans l'édition financière</p>
+                            <p>Maquettiste Exécutant dans l'édition financière</p>
                             <p>Scan, saisie, flashage</p>
                         </div>
                     </div>
